# glookoo

./: Makefile  Makefile.w32  README.md  build.bat  config.h  config.h.in  configure  configure.in  glookoo.cxx
