#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.61)
AC_INIT(FULL-PACKAGE-NAME, VERSION, BUG-REPORT-ADDRESS)
AC_CONFIG_SRCDIR([glookoo.cxx])
AC_CONFIG_HEADER([config.h:config.h.in])

# Checks for programs.
AC_PROG_CXX

# Checks for libraries.
# FIXME: Replace `main' with a function in `-lgloox':
AC_CHECK_LIB([gloox], [main])
# FIXME: Replace `main' with a function in `-lpthread':
AC_CHECK_LIB([pthread], [main])
# FIXME: Replace `main' with a function in `-lreadline':
AC_CHECK_LIB([readline], [main])

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([stdlib.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_CONST
AC_TYPE_SIZE_T

# Checks for library functions.
AC_FUNC_MALLOC
AC_CHECK_FUNCS([strchr strdup])
AC_TRY_COMPILE([
#include <gloox/client.h>
#include <gloox/connectionlistener.h>
#include <gloox/messagesessionhandler.h>
#include <gloox/messageeventhandler.h>
#include <gloox/messagehandler.h>
#include <gloox/message.h>
#include <gloox/messagesession.h>
class test : public gloox::ConnectionListener, gloox::MessageHandler {
public:
	test();
	virtual void handleMessage(const gloox::Message& msg, gloox::MessageSession *session) {}
}; ], ,
	  AC_MSG_RESULT(yes)
		AC_DEFINE(HAVE_GLOOX_MESSAGE_HEADER),
	  AC_MSG_RESULT(no))

#AC_CONFIG_FILES([Makefile])
AC_OUTPUT
